--- a/src/too/sistemadeventasBundle/Resources/config/routing.yml
+++ b/src/too/sistemadeventasBundle/Resources/config/routing.yml
@@ -25,3 +25,6 @@ logout:
 catalogo:
     path:     /catalogo
     defaults: { _controller: toosistemadeventasBundle:Default:catalogo }
+file:
+    path:     /file
+    defaults: { _controller: toosistemadeventasBundle:Seguridad:fer }
