--- a/src/too/sistemadeventasBundle/Resources/config/routing.yml
+++ b/src/too/sistemadeventasBundle/Resources/config/routing.yml
@@ -25,3 +25,55 @@ logout:
 catalogo:
     path:     /catalogo
     defaults: { _controller: toosistemadeventasBundle:Default:catalogo }
+
+inicioAdmin:
+    path:     /inicioAdmin
+    defaults: { _controller: toosistemadeventasBundle:Usuario:index }
+
+productos:
+    path:     /productos
+    defaults: { _controller: toosistemadeventasBundle:Productos:productos }
+
+crudUsuarios:
+    path:     /crudUsuarios
+    defaults: { _controller: toosistemadeventasBundle:Usuario:usuarios }
+
+crudAdmin:
+    path:     /crudAdmin
+    defaults: { _controller: toosistemadeventasBundle:Usuario:admin }
+
+crudClientes:
+    path:     /crudClientes
+    defaults: { _controller: toosistemadeventasBundle:Usuario:clientes }
+
+allUsuarios:
+    path:     /allUsuarios
+    defaults: { _controller: toosistemadeventasBundle:Usuario:all }
+
+nuevoAdmin:
+    path:     /nuevoAdmin
+    defaults: { _controller: toosistemadeventasBundle:Usuario:nuevoAdmin }
+
+nuevoCliente:
+    path:     /nuevoCliente
+    defaults: { _controller: toosistemadeventasBundle:Usuario:nuevoCliente }
+
+editarUsuario:
+    path:     /editarUsuario/{idUsu}
+    defaults: { _controller: toosistemadeventasBundle:Usuario:editarUsuario }
+
+editarAdmin:
+    path:     /editarAdmin/{idUsu}
+    defaults: { _controller: toosistemadeventasBundle:Usuario:editarAdmin }
+
+editarCliente:
+    path:     /editarCliente/{idUsu}
+    defaults: { _controller: toosistemadeventasBundle:Usuario:editarCliente}
+
+deleteUsuario:
+    path:     /deleteUsuario/{idUsu}
+    defaults: { _controller: toosistemadeventasBundle:Usuario:deleteUsuario }
+
+deleteAdmin:
+    path:     /deleteAdmin/{idUsu}
+    defaults: { _controller: toosistemadeventasBundle:Usuario:deleteAdmin }
