CRUD DE PRODUCTOS

--- a/src/too/sistemadeventasBundle/Resources/config/routing.yml
+++ b/src/too/sistemadeventasBundle/Resources/config/routing.yml
@@ -82,3 +82,15 @@ deleteAdmin:
 file:
     path:     /regPendiente
     defaults: { _controller: toosistemadeventasBundle:Seguridad:registroProducto }
+
+nuevoProducto:
+    path:     /nuevoProducto
+    defaults: { _controller: toosistemadeventasBundle:Productos:nuevoProducto }
+
+editarProducto:
+    path:     /editarProducto/{id}
+    defaults: { _controller: toosistemadeventasBundle:Productos:editarProducto}
+
+bajarProducto:
+    path:     /bajarProducto/{id}
+    defaults: { _controller: toosistemadeventasBundle:Productos:bajarProducto}
