--- a/src/too/sistemadeventasBundle/Resources/config/routing.yml
+++ b/src/too/sistemadeventasBundle/Resources/config/routing.yml
@@ -78,7 +78,6 @@ deleteUsuario:
 deleteAdmin:
     path:     /deleteAdmin/{idUsu}
     defaults: { _controller: toosistemadeventasBundle:Usuario:deleteAdmin }
-
 file:
     path:     /regPendiente
     defaults: { _controller: toosistemadeventasBundle:Seguridad:registroProducto }
@@ -94,3 +93,6 @@ editarProducto:
 bajarProducto:
     path:     /bajarProducto/{id}
     defaults: { _controller: toosistemadeventasBundle:Productos:bajarProducto}
+dql:
+    path:     /dql
+    defaults: { _controller: toosistemadeventasBundle:Default:DQL}
